# apple-picknplace

./: .gitignore  README.md  config_template.yml  execution_manager.py  gpt_client.py  main.py  perception.py  planner.py  pyproject.toml  robot_client_interface.py  rotation_utils.py  server.py  utils.py
applebot/: execution_manager.py  gpt_client.py  perception.py  planner.py  robot_client_interface.py  server.py
applebot/utils/: common_utils.py  deoxys_utils.py  rs_capture.py
asset/: panda_arm_hand_cam.urdf
beepp/: execution_manager.py  gpt_client.py  perception.py  planner.py  robot_client_interface.py  server.py
beepp/utils/: rs_capture.py
hw_utils/: deoxys_utils.py  rs_capture.py
