[project]
name = "beepp"
version = "0.1.0"
description = "Basic automated pick and place"
readme = "README.md"
license = {text = "MIT"}
keywords = ["robotics"]
authors = [
    { name = "Xiaolin Fang", email = "fxlfang@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dynamic = ["dependencies"]


[project.urls]
Source = "https://github.com/FANG-Xiaolin/beep-picknplace"

[tool.setuptools.packages.find]
include = ["beepp"]
namespaces = true
